# hackathon

./: evaluation_script.py  playground.ipynb  pyproject.toml  readme.md  simulator.py  strategy.py  util.py
submit/: pyproject.toml  strategy.py
