[tool.poetry]
name = "hackathon_template"
version = "0.1.0"
description = ""
authors = ["TomasRusy <tomas.rusy@terminus-research.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
numpy = "^1.22.4"
plotly = "^5.8.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
